0.2.0
 - packaging cleanup

0.1.0
 - initial release with proper package structure and versioning